@@ -1,3 +1,8 @@
+1998-11-22  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>
+
+	* gnomine.c (main): 'gnome_new_default_client' replaced by
+ 	'gnome_master_client'.
+
 1998-09-24  Miguel de Icaza  <miguel@nuclecu.unam.mx>
 
 	* gnomine.c: Added shortcut support.
